Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -904,10 +904,13 @@ function applyFilters() {
     <span style="margin-left:8px; font-size:0.8rem; color:#25d366;" onclick="openPaymentModal2()">
 💳 Payment Plan
 </span>
-    <span style="font-weight:bold; color:rgb(56, 255, 86);">
-      $6,500 USD
-    </span>
-      </span>
+<span style="font-weight:bold; color:rgb(255, 255, 255);">
+  🇺🇸 $6,500 USD
+<br>
+<span style="font-size:0.8rem; color:rgb(56, 255, 86); opacity:0.8; font-weight:normal;">
+  🇲🇽 $123,500 MXN
+</span>
+
 </div>
 
 <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
@@ -915,11 +918,12 @@ function applyFilters() {
 <span style="margin-left:8px; font-size:0.8rem; color:#25d366;" onclick="openPaymentModal()">
   💳 Payment Plan
 </span>
-    <span style="font-weight:bold; color:rgb(56, 255, 86);">
-      $100,000 MXN
-    </span>
-
-  </span>
+<span style="font-weight:bold; color:rgb(255, 255, 255);">
+  🇺🇸 $5,300 USD
+<br>
+<span style="font-size:0.8rem; color:rgb(56, 255, 86); opacity:0.8; font-weight:normal;">
+  🇲🇽 $100,000 MXN
+</span>
 </div>
 
 
@@ -986,12 +990,13 @@ function applyFilters() {
     <span style="margin-left:8px; font-size:0.8rem; color:#25d366;" onclick="openPaymentModal2()">
   💳 Payment Plan
   </span>
-<span style="font-weight:bold; color:rgb(56, 255, 86);">
-  $3,200 USD
+<span style="font-weight:bold; color:rgb(255, 255, 255);">
+  🇺🇸 $3,200 USD
 <br>
-<span style="font-size:0.70em; color:rgb(56, 255, 86); opacity:0.8;">
-  $60,800 MXN
-  </span>
+<span style="font-size:0.8rem; color:rgb(56, 255, 86); opacity:0.8; font-weight:normal;">
+  🇲🇽 $60,800 MXN
+</span>
+
   
 </div>
 
@@ -1098,21 +1103,24 @@ function applyFilters() {
   onmouseout="this.style.opacity='1'">
   💳 Payment Plan
 </span>
-    <span style="font-weight:bold; color:rgb(0, 0, 0);">
-      $4,150 USD
-  </span>
+<span style="font-weight:bold; color:rgb(0, 0, 0);">
+  🇺🇸 $4,200 USD
+<br>
+<span style="font-size:0.8rem; color:rgb(0, 18, 3); opacity:0.8; font-weight:normal;">
+  🇲🇽 $80,000 MXN
 </div>
 
 <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
   <span>Category 1</span>
 <span style="margin-left:8px; font-size:0.8rem; color:#25d366;" onclick="openPaymentModal2()">
-  🎉SPECIAL OFFER🥳
+  💳 Payment Plan
 </span>
-    <span style="font-weight:bold; color: rgb(0, 255, 255);">
-      $3,100 USD
-    </span>
-
-  </span>
+<span style="font-weight:bold; color:rgb(255, 255, 255);">
+  🇺🇸 $3,200 USD
+<br>
+<span style="font-size:0.8rem; color:rgb(56, 255, 86); opacity:0.8; font-weight:normal;">
+  🇲🇽 $60,800 MXN
+</span>
 </div>
 
   <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
@@ -1214,6 +1222,8 @@ function applyFilters() {
   onclick="openPaymentModal2()"
   onmouseover="this.style.opacity='0.85'"
   onmouseout="this.style.opacity='1'">
+
+  💳 Out of Stock
 
 </span>
     <span style="font-weight:bold; color:rgb(0, 0, 0);">
@@ -1476,7 +1486,6 @@ function applyFilters() {
 
 </body>
 </html>
-
 
 
 
