--- a/index.html
+++ b/index.html
@@ -997,13 +997,36 @@ function applyFilters() {
   🇲🇽 $60,800 MXN
 </span>
 
+</div>
+
+ <!-- Categories -->
+  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:6px;">
+    <span>Category 1</span>
+<span style="margin-left:8px; font-size:0.8rem; color:#11f3ff; cursor:pointer;">
+  🔁 Transfer Ready
+</span>
+<span style="font-weight:bold; color:rgb(255, 255, 255);">
+  🇺🇸 $3,000 USD
+<br>
+<span style="font-size:0.8rem; color:rgb(56, 255, 86); opacity:0.8; font-weight:normal;">
+  🇲🇽 $57,000 MXN
+</span>
   
 </div>
 
-  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
+  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:6px;">
     <span>Category 2</span>
-    <span class="soldout-box" style="color:rgb(253, 169, 169); font-weight:bold; text-transform:uppercase;">SOLD OUT</span>
-  </div>
+    <span style="margin-left:8px; font-size:0.8rem; color:#25d366;" onclick="openPaymentModal2()">
+  💳 Payment Plan
+  </span>
+<span style="font-weight:bold; color:rgb(255, 255, 255);">
+  🇺🇸 $2,400 USD
+<br>
+<span style="font-size:0.8rem; color:rgb(56, 255, 86); opacity:0.8; font-weight:normal;">
+  🇲🇽 $46,000 MXN
+</span>
+
+</div>
 
   <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
     <span>Category 3</span>
@@ -1293,10 +1316,18 @@ function applyFilters() {
 
   <!-- Categories -->
 
-  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
-    <span>Category 1</span>
-    <span class="soldout-box" style="color:rgb(253, 169, 169); font-weight:bold; text-transform:uppercase;">SOLD OUT</span>
-  </div>
+<div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
+  <span>Category 1</span>
+<span style="margin-left:8px; font-size:0.8rem; color:#25d366;" onclick="openPaymentModal2()">
+  💳 Payment Plan
+</span>
+<span style="font-weight:bold; color:rgb(255, 255, 255);">
+  🇺🇸 $2,450 USD
+<br>
+<span style="font-size:0.8rem; color:rgb(56, 255, 86); opacity:0.8; font-weight:normal;">
+  🇲🇽 $47,000 MXN
+</span>
+</div>
 
     <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
     <span>Category 2</span>
@@ -1364,19 +1395,27 @@ function applyFilters() {
   </div>
 
   <!-- Categories -->
-  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:6px;">
-    <span>Category 1</span>
-    <span style="font-weight:bold;">$3,400 USD</span>
-  </div>
+<div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
+  <span>Category 1</span>
+<span style="margin-left:8px; font-size:0.8rem; color:#25d366;" onclick="openPaymentModal2()">
+  💳 Payment Plan
+</span>
+<span style="font-weight:bold; color:rgb(255, 255, 255);">
+  🇺🇸 $3,100 USD
+<br>
+<span style="font-size:0.8rem; color:rgb(56, 255, 86); opacity:0.8; font-weight:normal;">
+  🇲🇽 $59,000 MXN
+</span>
+</div>
 
-  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:6px;">
+    <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
     <span>Category 2</span>
-    <span style="font-weight:bold;">$2,500 USD</span>
+    <span class="soldout-box" style="color:rgb(253, 169, 169); font-weight:bold; text-transform:uppercase;">SOLD OUT</span>
   </div>
 
-  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:6px;">
+  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
     <span>Category 3</span>
-    <span style="font-weight:bold;">$2,200 USD</span>
+    <span class="soldout-box" style="color:rgb(253, 169, 169); font-weight:bold; text-transform:uppercase;">SOLD OUT</span>
   </div>
 
 
@@ -1436,9 +1475,9 @@ function applyFilters() {
   </div>
 
   <!-- Categories -->
-  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:6px;">
+      <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
     <span>Category 1</span>
-    <span style="font-weight:bold;">$4,350 USD</span>
+    <span class="soldout-box" style="color:rgb(253, 169, 169); font-weight:bold; text-transform:uppercase;">SOLD OUT</span>
   </div>
 
       <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
@@ -1469,6 +1508,167 @@ function applyFilters() {
       alt="Stadium Map"
       style="height:40px; cursor:pointer;"
       onclick="openMapModal('sofi-map.jpg')"
+    >
+        <img src="fury-icon.png" alt="Logo Izquierdo" class="logo-card">
+  </div>
+
+</article>
+  </section>
+
+<!-- Match Card M2 -->
+ <section id="tickets" class="products-grid">
+<article 
+  class="product-card ticket-card"
+  data-match="M2"
+  data-category="mexico-city"
+>
+
+  <!-- Logos + Title -->
+  <div class="match-title" style="display:flex; align-items:center; gap:12px; font-weight:bold; color:rgb(183,233,183);">
+    <span style="
+      display:inline-block;
+      background-color:rgb(246, 245, 245);
+      color:rgb(22, 20, 20);
+      font-weight:bold;
+      font-size:18px;
+      padding:4px 10px;
+      border-radius:4px;
+      margin-bottom:4px;">  
+      M2
+    </span>
+
+    <img src="southkorea-logo.png" alt="South Korea Logo" style="height:32px; width:auto;">
+    <span class="gray-box">SOUTH KOREA VS UEFA PO‑D</span>
+    <img src="uefa-playoff-logo.png" alt="uefa-playoff-logo" style="height:32px; width:auto;">
+  </div>
+
+  <!-- Venue + Date -->
+  <div class="venue-info" style="font-size:0.85rem; margin-top:6px;">
+    <div>📍 Venue: Estadio Akron, Guadalajara 🇲🇽</div>
+    <div style="color:rgb(121,203,250);">🗓️ June 11, 2026 · 18:00</div>
+  </div>
+
+  <!-- Categories -->
+<div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
+  <span>Category 1</span>
+<span style="margin-left:8px; font-size:0.8rem; color:#09d2ff; cursor:pointer;" >
+  🔁 Transfer Ready
+</span>
+<span style="font-weight:bold; color:rgb(255, 255, 255);">
+  🇺🇸 $1,060 USD
+<br>
+<span style="font-size:0.8rem; color:rgb(56, 255, 86); opacity:0.8; font-weight:normal;">
+  🇲🇽 $20,000 MXN
+</span>
+</div>
+
+    <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
+    <span>Category 2</span>
+    <span class="soldout-box" style="color:rgb(253, 169, 169); font-weight:bold; text-transform:uppercase;">SOLD OUT</span>
+  </div>
+
+  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
+    <span>Category 3</span>
+    <span class="soldout-box" style="color:rgb(253, 169, 169); font-weight:bold; text-transform:uppercase;">SOLD OUT</span>
+  </div>
+
+
+
+
+  <!-- WhatsApp + Stadium Map -->
+  <div style="display:flex; justify-content:space-between; align-items:center; margin-top:14px;">
+    <button 
+      class="btn-primary"
+      onclick="sendWhatsApp('M66', 'URUGUAY VS SPAIN', true)">
+      Buy Tickets
+    </button>
+
+    <img 
+      src="stadium.png" 
+      alt="Stadium Map"
+      style="height:40px; cursor:pointer;"
+      onclick="openMapModal('akron-map.jpg')"
+    >
+        <img src="fury-icon.png" alt="Logo Izquierdo" class="logo-card">
+  </div>
+
+  
+</article>
+  </section>
+
+<!-- Match Card M66 -->
+ <section id="tickets" class="products-grid">
+<article 
+  class="product-card ticket-card"
+  data-match="M66"
+  data-category="mexico-city"
+>
+
+  <!-- Logos + Title -->
+  <div class="match-title" style="display:flex; align-items:center; gap:12px; font-weight:bold; color:rgb(183,233,183);">
+    <span style="
+      display:inline-block;
+      background-color:rgb(246, 245, 245);
+      color:rgb(22, 20, 20);
+      font-weight:bold;
+      font-size:18px;
+      padding:4px 10px;
+      border-radius:4px;
+      margin-bottom:4px;">  
+      M66
+    </span>
+
+    <img src="uruguay-logo.png" alt="Uruguay Logo" style="height:32px; width:auto;">
+    <span class="gray-box">URUGUAY VS SPAIN</span>
+    <img src="spain-logo.png" alt="Spain Logo" style="height:32px; width:auto;">
+  </div>
+
+  <!-- Venue + Date -->
+  <div class="venue-info" style="font-size:0.85rem; margin-top:6px;">
+    <div>📍 Venue: Estadio Akron, Guadalajara 🇲🇽</div>
+    <div style="color:rgb(121,203,250);">🗓️ June 26, 2026 · 18:00</div>
+  </div>
+
+  <!-- Categories -->
+<div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
+  <span>Category 1</span>
+<span style="margin-left:8px; font-size:0.8rem; color:#09d2ff; cursor:pointer;" >
+  🔁 Transfer Ready
+</span>
+<span style="font-weight:bold; color:rgb(255, 255, 255);">
+  🇺🇸 $2,300 USD
+<br>
+<span style="font-size:0.8rem; color:rgb(56, 255, 86); opacity:0.8; font-weight:normal;">
+  🇲🇽 $43,700 MXN
+</span>
+</div>
+
+    <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
+    <span>Category 2</span>
+    <span class="soldout-box" style="color:rgb(253, 169, 169); font-weight:bold; text-transform:uppercase;">SOLD OUT</span>
+  </div>
+
+  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
+    <span>Category 3</span>
+    <span class="soldout-box" style="color:rgb(253, 169, 169); font-weight:bold; text-transform:uppercase;">SOLD OUT</span>
+  </div>
+
+
+
+
+  <!-- WhatsApp + Stadium Map -->
+  <div style="display:flex; justify-content:space-between; align-items:center; margin-top:14px;">
+    <button 
+      class="btn-primary"
+      onclick="sendWhatsApp('M66', 'URUGUAY VS SPAIN', true)">
+      Buy Tickets
+    </button>
+
+    <img 
+      src="stadium.png" 
+      alt="Stadium Map"
+      style="height:40px; cursor:pointer;"
+      onclick="openMapModal('akron-map.jpg')"
     >
         <img src="fury-icon.png" alt="Logo Izquierdo" class="logo-card">
   </div>
